일부 기능 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
             <h6 class="text-xl-start">다른 사람 프로필 클릭시 정보 보기 기능(일부 구현)</h6>
             <h6 class="text-xl-start">공지 기능(구현)</h6>
             <h6 class="text-xl-start">레이드 모집 완료 기능(구현)</h6>
-            <h6 class="text-xl-start">다른 게임 추가</h6>
+            <h6 class="text-xl-start">다른 게임 추가(일부 구현)</h6>
             <hr class="my-2">
             <h4 class="text-xl-start">확인된 버그</h4>
             <h6 class="text-xl-start">프로필 가끔 안보임</h6>
