--- a/src/main/resources/templates/raid/profile.html
+++ b/src/main/resources/templates/raid/profile.html
@@ -20,8 +20,10 @@
                         <dd th:text="${account.bio}"></dd>
                         <label>링크</label>
                         <dd th:text="${account.url}"></dd>
-                        <label>직업</label>
+                        <label>로아 직업</label>
                         <dd th:text="${account.occupation}"> </dd>
+                        <label>메이플 직업</label>
+                        <dd th:text="${account.occupation_map}"> </dd>
                     </div>
 
 
